k8s/media-stack/base/apps/mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: media
spec:
  selector:
    app: mealie
  ports:
    - port: 80
      targetPort: 9000
